<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <EditText
        android:id="@+id/nameSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:hint="Full name"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColor="@color/lightBrown"
        android:textColorHint="@color/lightBrown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addressSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Address"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColor="@color/lightBrown"
        android:textColorHint="@color/lightBrown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberSignUp" />

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/lightBrown"
        android:textColorHint="@color/lightBrown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passSignUp" />

    <EditText
        android:id="@+id/phoneNumberSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Phone Number"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/lightBrown"
        android:textColorHint="@color/lightBrown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignUp" />

    <EditText
        android:id="@+id/passSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/lightBrown"
        android:textColorHint="@color/lightBrown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSignUp" />

    <Button
        android:id="@+id/SignUp2"
        android:layout_width="141dp"
        android:layout_height="41dp"
        android:layout_gravity="start"
        android:enabled="true"
        android:text="@string/action_sign_up"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressSignUp" />

    <Button
        android:id="@+id/SignIn2"
        android:layout_width="141dp"
        android:layout_height="41dp"
        android:layout_gravity="start"
        android:layout_marginTop="4dp"
        android:enabled="true"
        android:text="Sign in"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp2" />

    <ImageView
        android:id="@+id/imageViewSignUp"
        android:layout_width="342dp"
        android:layout_height="178dp"
        app:layout_constraintBottom_toTopOf="@+id/nameSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sign_in_img" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="171dp"
        android:layout_height="58dp"
        android:fontFamily="cursive"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/lightBrown"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSignUp"
        app:layout_constraintVertical_bias="0.25" />
</androidx.constraintlayout.widget.ConstraintLayout>